2002-06-03  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* umount.cc (version): New global variable.
	(longopts): Accommodate new --version option.
	(opts): Ditto.
	(usage): Standardize usage output.
	(print_version): New function.
	(main): Accommodate --help, --version options.

2002-06-02  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* regtool.cc (prog_name): New global variable.
	(longopts): Ditto.
	(opts): Ditto.
	(usage): Standardize usage output.  Rearrange/add descriptions.
	(print_version): New function.
	(main): Accommodate longopts and new --help, --version options.  Add
	check for (_argv[optind+1] == NULL).

2002-06-02  Christopher Faylor  <cgf@redhat.com>

	* strace.cc (forkdebug): Make true by default.
	(attach_process): Use window pid if cygwin pid isn't available (yet).
	(create_child): Use either DEBUG_ONLY_THIS_PROCESS or DEBUG_PROCESS,
	exclusively. (Suggested by Conrad.Scott@dsl.pipex.com)

2002-05-30  Christopher Faylor  <cgf@redhat.com>

	* mkpasswd.cc (main): Don't reset to binmode if stdout is a terminal.

2002-05-29  Christopher Faylor  <cgf@redhat.com>

	* mount.cc (main): Make -b the default.

2002-05-29  Corinna Vinschen  <corinna@vinschen.de>

	* ps.cc (main): Use uid or uid32 member of struct external_pinfo
	dependent of the value of the struct's version member.

2002-05-29  Corinna Vinschen  <corinna@vinschen.de>

	* ps.cc (main): Change print format for uid to unsigned.  Use uid32
	member of struct external_pinfo instead of uid.

2002-05-28  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* passwd.c (prog_name): New global variable.
	(longopts): Ditto.
	(opts): Ditto.
	(usage): Standardize output. Accommodate new options.
	(print_version): New function.
	(main): Accommodate longopts and new --help, --version options.

2002-05-28  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* ps.cc (usage): Fix typo.

2002-05-27  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>
